fix(lp): hide overflow-x

--- a/styles/mainPage/styles.css
+++ b/styles/mainPage/styles.css
@@ -29,6 +29,7 @@
 html {
   scroll-behavior: smooth;
   background-color: var(--color-beige);
+  overflow-x: hidden;
 }
 
 /* navbar */
